--- a/artberryproj/artberry.html
+++ b/artberryproj/artberry.html
@@ -13,7 +13,7 @@
                 font-size: 1.15em;
                 
             }
-            body{ margin: 0; padding: 0px;}
+            body{ margin: 0; padding: 0px; overflow-x: hidden;}
             #topbar{
                 background-color: #FFF;
                 height: 100px;
