--- a/artberryproj/artberry.html
+++ b/artberryproj/artberry.html
@@ -11,7 +11,8 @@
                 font-family: Raleway,sans-serif;
                 scroll-behavior: smooth;
                 font-size: 1.15em;
-                
+                max-width: 100%; /* Ensure it doesn't exceed the viewport */
+                margin: 0 auto;
             }
             body{ margin: 0; padding: 0px; overflow-x: hidden;}
             #topbar{
